# docs/swagger.json
@@ -1,10 +1,4 @@
 {
-<<<<<<< HEAD
-    "swagger": "2.0",
-    "info": {
-        "contact": {}
-    },
-=======
     "schemes": [
         "http"
     ],
@@ -24,7 +18,6 @@
     },
     "host": "127.0.0.1",
     "basePath": "/",
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
     "paths": {
         "/api/v1/auth/check": {
             "post": {
@@ -815,51 +808,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-<<<<<<< HEAD
                             "type": "json"
-=======
-                            "type": "object",
-                            "properties": {
-                                "body": {
-                                    "type": "object",
-                                    "properties": {
-                                        "film": {
-                                            "$ref": "#/definitions/domain.Video"
-                                        }
-                                    }
-                                }
-                            }
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-<<<<<<< HEAD
                             "type": "json"
-=======
-                            "$ref": "#/definitions/domain.Response"
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-<<<<<<< HEAD
                             "type": "json"
-=======
-                            "$ref": "#/definitions/domain.Response"
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-<<<<<<< HEAD
                             "type": "json"
-=======
-                            "$ref": "#/definitions/domain.Response"
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
                         }
                     }
                 }
@@ -1106,6 +1073,109 @@
                 }
             }
         },
+        "/api/v1/video/rating": {
+            "post": {
+                "description": "Adds the rate to the video.",
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "Adds the rate to the video.",
+                "parameters": [
+                    {
+                        "description": "user credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Rate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/video/rating/{id}": {
+            "delete": {
+                "description": "Deletes the user rate for the video.",
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "Deletes the rate.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "The id of the video.",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/v1/genres/films": {
             "get": {
                 "description": "Get a list of genres.",
@@ -1187,8 +1257,6 @@
                     }
                 }
             }
-<<<<<<< HEAD
-=======
         },
         "/v1/video/favourites/check/{id}": {
             "post": {
@@ -1200,7 +1268,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "The id of the video you want to delete.",
+                        "description": "The id of the video you want to check.",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1247,7 +1315,64 @@
                     }
                 }
             }
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
+        },
+        "/v1/video/rating/check/{id}": {
+            "post": {
+                "description": "checks if the video was rated by the user",
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "checks is rated",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "The id of the video.",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "body": {
+                                    "type": "object",
+                                    "properties": {
+                                        "isRated": {
+                                            "type": "boolean"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "err": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1287,18 +1412,17 @@
                 }
             }
         },
-<<<<<<< HEAD
-=======
-        "domain.Response": {
+        "domain.Rate": {
             "type": "object",
             "properties": {
-                "body": {},
-                "err": {
-                    "type": "string"
+                "rate": {
+                    "type": "integer"
+                },
+                "videoId": {
+                    "type": "integer"
                 }
             }
         },
->>>>>>> 87142617555a9c83eee773fbca2503ee0d74cd09
         "domain.User": {
             "type": "object",
             "properties": {
@@ -1378,7 +1502,7 @@
                 "previewVideoPath": {
                     "type": "string"
                 },
-                "rating": {
+                "rating.go": {
                     "type": "number"
                 },
                 "releaseYear": {
@@ -1416,7 +1540,7 @@
                 "previewVideoPath": {
                     "type": "string"
                 },
-                "rating": {
+                "rating.go": {
                     "type": "number"
                 },
                 "releaseYear": {
